--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/logo.png"
+      type="image/x-icon"
+    /> 
+    <!-- * alt sayfalarda da aynı icon görünmesi için kendi iconumuzun yoluna %PUBLIC_URL%/ ekliyoruz -->
+
     <title>Stock App</title>
   </head>
   <body>
