occured general data for reducer, updated all firm pages and modals that belongs to firms, updated useStockRequest and slice, changed the names for functions

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       href="%PUBLIC_URL%/logo.png"
       type="image/x-icon"
     /> 
-    <!-- * alt sayfalarda da aynı icon görünmesi için kendi iconumuzun yoluna %PUBLIC_URL%/ ekliyoruz -->
+    <!-- ! alt sayfalarda da aynı icon görünmesi için kendi iconumuzun yoluna %PUBLIC_URL%/ ekliyoruz -->
 
     <title>Stock App</title>
   </head>
