chore: tremor, promise.all, tailwindcss fix: dashboard,home,login,register add: kpi,charts

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     /> 
     <!-- ! alt sayfalarda da aynı icon görünmesi için kendi iconumuzun yoluna %PUBLIC_URL%/ ekliyoruz -->
 
-    <title>Stock App</title>
+    <title>Becoo's Inventory</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
